--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="header__texto">
-            <h2 class="no-margin">Vertex Automozione</h2>
+            <h2 class="no-margin">Vertex Simulazione</h2>
             <p class="no-margin">Disfruta de tu mejor simulador</p>
         </div>
     </header>
