--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
             <article class="entrada">
                 <div class="entrada__imagen">
                     <h3>¿Dónde estamos?</h3>>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6900.394870925095!2d-3.7669658646185336!3d40.105232279589586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd41f794fe9974b3%3A0x1bc7f80e9e1d6276!2sCentro%20de%20Salud%20Esquivias!5e0!3m2!1ses!2ses!4v1651133835013!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1482.4357958990333!2d-3.7649598986723594!3d40.103311581239815!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd41f79536b51c47%3A0x4a6a7108c90a2234!2sC.%20Tahona%2C%2045221%20Esquivias%2C%20Toledo!5e0!3m2!1ses!2ses!4v1651222494477!5m2!1ses!2ses" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                </div>
             </article>            
 
         </main>
