cambios importantes indext y nosotros
quitamos precios pagina princpal, eliminamos nosotros en pagina nosotros

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Krub:wght@400;700&family=Open+Sans&family=PT+Sans:wght@400;700&family=Staatliches&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="/style.css">
+
 </head>
 <body>
     <header class="header">
@@ -43,7 +44,7 @@
 <!--article reutilizable-->
             <article class="entrada">
                 <div class="entrada__imagen">
-                    <img src="img/img1.jpeg" alt="imagen1">
+                    <img src="img/instalaciones.jpg" alt="imagen1">
                 </div>
 
                 <div class="entrada__contenido">
@@ -91,38 +92,22 @@
             <ul class="cursos no-padding">
 <!--Primer curso-->
                 <li class="widget-curso">
-                    <h4 class="no-margin">Técnicas para tomar curvas</h4>
-                    <p class="widget-curso__label">Max asistentes:
-                        <span class="widget-curso__info">5</span>
-                    </p>
-                    <p class="widget-curso__label">Precio:
-                        <span class="widget-curso__info">20€</span>
-                    </p>
-                    <a href="cursos.html" class="boton boton--secundario">Ir a curso</a>
+                    <h4 class="no-margin">Cursos</h4>
+                    <p class="widget-curso__label">Para conocer más                 
+                    <a href="cursos.html" class="boton boton--secundario">Cursos</a>
                 </li>
 <!--Fin primer curso-->
                 <li class="widget-curso">
-                    <h4 class="no-margin">Técnicas drift</h4>                    
-                    <p class="widget-curso__label">Max asistentes:
-                        <span class="widget-curso__info">5</span>
-                    </p>
-                    <p class="widget-curso__label">Precio:
-                        <span class="widget-curso__info">20€</span>
-                    </p>
-                    <a href="cursos.html" class="boton boton--secundario">Ir a curso</a>
-                </li>
-
-                <li class="widget-curso">
                     <h4 class="no-margin">Campeonato</h4>
-                    <p class="widget-curso__label">Max asistentes:
-                        <span class="widget-curso__info">30</span>
-                    <p class="widget-curso__label">Numero de carreras:
-                        <span class="widget-curso__info">30</span>
-                    </p>                    
-                    <p class="widget-curso__label">Precio:
-                        <span class="widget-curso__info">100€</span>
-                    </p>
+                    <p class="widget-curso__label">Para conocer más
+                       <!-- <span class="widget-curso__info">30</span>         -->            
                     <a href="competiciones.html" class="boton boton--secundario">Campeonato</a>
+                </li>
+                <li class="widget-curso">
+                    <h4 class="no-margin">Redes Sociales</h4>
+                    <a href="#"><img class="iconoRRSS" src="/img/instagram.png" alt="isntagram"></a>                
+                    <a href="#"><img class="iconoRRSS" src="/img/facebook.png" alt="facebook"></a>                 
+                    <a href="#"><img class="iconoRRSS" src="/img/whatsapp.png" alt="whatsapp"></a>                
                 </li>
             </ul>
         </aside>
