--- a/nosotros.html
+++ b/nosotros.html
@@ -10,6 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Krub:wght@400;700&family=Open+Sans&family=PT+Sans:wght@400;700&family=Staatliches&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="/style.css">
+
 </head>
 <body>
     <header class="header">
@@ -37,18 +38,6 @@
 
         <main class="contenedor">
 
-        <h3 class="centrar-texto">Nosotros</h3>
-
-        <div class="nosotros">
-            <div class="nosotros__contenido">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam, consectetur a. Id ducimus aliquid, iure enim porro minima, incidunt sint in earum doloremque, maiores animi laboriosam quia rem delectus eius.</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam, consectetur a. Id ducimus aliquid, iure enim porro minima, incidunt sint in earum doloremque, maiores animi laboriosam quia rem delectus eius.</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam, consectetur a. Id ducimus aliquid, iure enim porro minima, incidunt sint in earum doloremque, maiores animi laboriosam quia rem delectus eius.</p>
-
-            </div>
-            <img class="nosotros__imagen" src="img/img6.jpg" alt="imagen nosotros">
-        </div>
-
         <h3 class="centrar-texto">Nuestras instalaciones</h3>
 
         <div class="nosotros">
@@ -58,8 +47,14 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam, consectetur a. Id ducimus aliquid, iure enim porro minima, incidunt sint in earum doloremque, maiores animi laboriosam quia rem delectus eius.</p>
 
             </div>
-            <img class="nosotros__imagen__inverso" src="img/instalaciones.jpg" alt="imagen nosotros">
+            <img class="nosotros__imagen" src="img/instalaciones.jpg" alt="imagen nosotros">
         </div>
+
+
+
+
+
+
 
         </main>
 
@@ -80,6 +75,6 @@
             </div>
         </div>
     </footer>
-    
+  
 </body>
 </html>
